<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@mipmap/splash_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/login_wth_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="15dp"
                    android:text="@string/login_with"
                    android:textColor="@color/logincolor"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/fb_login_bt"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="15dp"
                    android:background="@mipmap/facebook_icon" />

                <ImageView
                    android:id="@+id/google_login_bt"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="15dp"
                    android:background="@mipmap/googleplus_icon" />

                <ImageView
                    android:id="@+id/twitter_login_bt"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="15dp"
                    android:background="@mipmap/twitter_icon" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/username_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/username_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/username"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@mipmap/password_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/mobile_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/username_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:maxLength="10" />


                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@mipmap/password_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/confirm_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@mipmap/password_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/conform_password"
                    android:inputType="textPassword" />


                <ImageButton
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="250dp"
                    android:layout_marginTop="5dp"
                    android:background="@mipmap/login_btn" />

                <TextView
                    android:id="@+id/signIn_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/account"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>