<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@mipmap/splash_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_wth_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"
                android:text="@string/login_with"
                android:textColor="@color/logincolor"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/fb_login_bt"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="15dp"
                android:background="@mipmap/facebook_icon" />

            <ImageView
                android:id="@+id/google_login_bt"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="15dp"
                android:background="@mipmap/googleplus_icon" />

            <ImageView
                android:id="@+id/twitter_login_bt"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="15dp"
                android:background="@mipmap/twitter_icon" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <EditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/username_icon"
                android:drawablePadding="10dp"
                android:hint="@string/usernameoremail"
                android:inputType="text" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@mipmap/password_icon"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <ImageButton
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="195dp"
                android:layout_marginTop="40dp"
                android:background="@mipmap/login_btn" />


            <TextView
                android:id="@+id/create_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/Dont_have_an_account"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/signup_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Sign_up"
                android:textColor="@color/signupcolor"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>