<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.androidgeeks.hp.zoyme.activity.ZoyMeSettingActivity">


    <include
        android:id="@+id/layout_top"
        layout="@layout/appbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="First Name"
                            android:textColor="@color/black"
                            android:textSize="16dp" />


                        <EditText
                            android:id="@+id/first_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/edittext_bg"
                            android:hint="Deepak Sikka"
                            android:inputType="text"
                            android:padding="15dp"
                            android:textColor="@color/black"
                            android:textSize="16dp" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:text="Last Name"
                            android:textColor="@color/black"
                            android:textSize="16dp" />

                        <EditText
                            android:id="@+id/last_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edittext_bg"
                            android:hint="Last Name"
                            android:inputType="text"
                            android:padding="15dp"
                            android:textColor="@color/black"
                            android:textSize="16dp" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:text="Date of Birth"
                            android:textColor="@color/black"
                            android:textSize="16dp" />


                        <TextView
                            android:id="@+id/datepicker"
                            style="@style/FieldEditText"
                            android:layout_marginTop="6dp"
                            android:hint="@string/date"
                            android:imeOptions="actionNext"
                            android:padding="15dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:text="Mobile"
                            android:textColor="@color/black"
                            android:textSize="16dp" />


                        <EditText
                            android:id="@+id/mobile_et_setting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/edittext_bg"
                            android:hint="@string/mobile"
                            android:inputType="number"
                            android:maxLength="10"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="16dp" />

                    </LinearLayout>


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/submit_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@color/buycolor"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18dp" />


            <LinearLayout
                android:id="@+id/change_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/more_interest_image"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/padlock" />

                <TextView
                    android:id="@+id/cpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="Change Password"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>


